# elk

./: .gitignore  AUTHORS  BUGS  CHANGES  CONTRIBUTORS  COPYING  ChangeLog  INSTALL  MACHINES  MIGRATE  Makefile  Makefile.am  NEWS  README  ROADMAP  TODO  bootstrap  build-win32  configure.ac
config/: 386pc-bsdi-gcc  alpha-osf1-cc  dec5100-ultrix4.2-cc  hp9k700-hpux10.0-cc  hp9k700-hpux9.0-cc  i486-linux-gcc  next-mach3.3-cc  powerpc-aix4.1-gcc  powerpc-aix4.1-xlc  powerpc-solaris2.5-cc  rs6000-aix3.2-cc  sgi-irix5.3-cc  sgi-irix6.2-cc  site  sun-sunos4.1-acc  sun-sunos4.1-cc  sun-sunos4.1-gcc  sun-sunos5-acc  (+2 more)
doc/bitstring/: Makefile  Makefile.am  bitstring.ms  bitstring.ps
doc/cprog/: Makefile  Makefile.am  cprog.ms  cprog.ps
doc/kernel/: Makefile  Makefile.am  kernel.ms  kernel.ps
doc/man/: Makefile  Makefile.am  elk.1  elk.ps  scheme.1
doc/oops/: Makefile  Makefile.am  oops.ms  oops.ps
doc/record/: Makefile  Makefile.am  record.ms  record.ps
doc/regexp/: Makefile  Makefile.am  regexp.ms  regexp.ps
doc/unix/: Makefile  Makefile.am  unix.ms  unix.ps
doc/usenix/: Makefile  Makefile.am  usenix.ms  usenix.ps
doc/xlib/: Makefile  Makefile.am  xlib.ms  xlib.ps
doc/xt/: Makefile  Makefile.am  xt.ms  xt.ps
examples/: Makefile.am
examples/CC/: class.c  constructor.c
examples/c++/: class.cpp  constructor.cpp
examples/gtk/: hello-world.scm
examples/motif/: drawing-area.scm  list.scm  main-window.scm  message-dialog.scm  option-menu.scm  popup-menu.scm  pulldown-menu.scm  radio.scm  scroll-bar.scm  selection-box.scm  vcr.scm
examples/regexp/: match.scm
examples/scheme/: Y.scm  acker.scm  billiard.scm  cc.scm  cell.scm  co.scm  compile.scm  cps.scm  dynamic.scm  fib.scm  fix.scm  flame.scm  hanoi.scm  kons.scm  meissel.scm  mondo.scm  perm.scm  prim.scm  rungekutta.scm  sqrt.scm  unify.scm  work.scm
examples/tests/: Makefile.am  gc-stress.scm  r4rstest.scm
examples/unix/: calc.scm  copy.scm  lock.scm  ls.scm  pipsiz.scm  timeout.scm
examples/xaw/: accel.scm  clickcount.scm  dialog.scm  grip.scm  list.scm  paned.scm  panner.scm  popup.scm  porthole.scm  pulldown.scm  scrollbar.scm  scrollbox.scm  stripchart.scm  text.scm  tree.scm  viewport.scm
examples/xlib/: hello.scm  lines.scm  map-all.scm  picture.scm  poly.scm  properties.scm  track.scm  useful.scm  wm-delete.scm
examples/xm/: drawing-area.scm  list.scm  main-window.scm  menu-stuff.scm  message-dialog.scm  option-menu.scm  popup-menu.scm  pulldown-menu.scm  radio-stuff.scm  radio.scm  scroll-bar.scm  selection-box.scm  vcr.scm
lib/gobject/: Makefile.am  closure.c  gobject.h  init.c  signal.c
lib/gtk/: Makefile.am  gtk.h  gtkmain.c  gtkwidget.c  gtkwindow.c  init.c
lib/misc/: Makefile.am  bitstring.c  build  debug.c  elk-eval.c  gdbm.c  hack.c  monitor.c  newhandler.c  newhandler.cpp  record.c  regexp.c  struct.c
lib/unix/: Makefile.am  TODO  build  error.c  fdescr.c  file.c  lock.c  misc.c  passwd.c  process.c  signal.c  system.c  temp.c  time.c  unix.c  unix.h  wait.c
lib/xaw/: Makefile  Makefile.am  ascii.d  box.d  build  clock.d  command.d  dialog.d  form.d  grip.d  label.d  list.d  menubutton.d  paned.d  panner.d  porthole.d  repeater.d  scrollbar.d  shell.d  simplemenu.d  sme.d  smebsb.d  smeline.d  stripchart.d  toggle.d  tree.d  viewport.d
lib/xlib/: Include.am  MISSING  Makefile  Makefile.am  build  client.c  color.c  colormap.c  cursor.c  display.c  error.c  event.c  extension.c  font.c  gcontext.c  grab.c  graphics.c  init.c  key.c  objects.c  pixel.c  pixmap.c  plugin.c  property.c  text.c  type.c  util.c  window.c  wm.c  xerror.c  xinit.c  xlib.h  xobjects.c
lib/xm/: Makefile.am  arrow-button.d  build  bulletin-brd.d  cascade-btn.d  command.d  drawing-area.d  drawn-button.d  file-selectn.d  form.d  frame.d  label.d  list.d  main-window.d  message-box.d  paned-window.d  push-button.d  row-column.d  scale.d  scroll-bar.d  scrolled-win.d  selectn-box.d  separator.d  shell.d  support.d  text.d  toggle-btn.d
lib/xm/xt/: Makefile  build
lib/xt/: Include.am  Makefile  Makefile.am  accelerator.c  action.c  build  callback.c  class.c  classname.c  context.c  converter.c  function.c  identifier.c  init.c  mkwidget.scm  objects.c  popup.c  resource.c  translation.c  widget.c  xt.h  xterror.c  xtinit.c  xtobjects.c
lib/xwidgets/: MISSING  Makefile.am  accelerator.c  action.c  callback.c  class.c  classname.c  context.c  converter.c  error.c  function.c  identifier.c  init.c  mkwidget.scm  objects.c  popup.c  resource.c  translation.c  widget.c  xt.h  xterror.c  xtinit.c  xtobjects.c
lib/xwidgets/motif/: ALIASES  Makefile.am  arrow-button.d  bulletin-brd.d  cascade-btn.d  command.d  drawing-area.d  drawn-button.d  file-selectn.d  form.d  frame.d  init.c  label.d  list.d  main-window.d  message-box.d  paned-window.d  push-button.d  row-column.d  scale.d  scroll-bar.d  scrolled-win.d  selectn-box.d  separator.d  shell.d  support.d  text.d  toggle-btn.d
lib/xwidgets/xaw/: ALIASES  Makefile.am  ascii.d  box.d  command.d  dialog.d  form.d  grip.d  init.c  label.d  list.d  menubutton.d  paned.d  panner.d  porthole.d  repeater.d  scrollbar.d  shell.d  simplemenu.d  sme.d  smebsb.d  smeline.d  stripchart.d  toggle.d  tree.d  viewport.d
lib/xwidgets/xm/: Makefile.am  cascade-btn.d  row-column.d  scrolled-win.d  selectn-box.d
scm/: Makefile  Makefile.am  apropos.scm  bitstring.scm  build  build-siteinfo  cscheme.scm  debug.scm  describe.scm  gdbmtest.scm  initscheme.scm  motif.scm  oops.scm  parse.scm  qsort.scm  record.scm  recordutil.scm  regexp.scm  safe-env.scm  setf.scm  slib.scm.in  struct.scm  toplevel.scm  trace.scm  unix.scm  xaw.scm  xlib.scm  xt.scm  xwidgets.scm
src/: Makefile  Makefile.am  autoload.c  bignum.c  bool.c  build  char.c  cont.c  cstring.c  debug.c  dump-ecoff.c  dump-elf.c  dump-hp9k.c  dump-vanilla.c  dump.c  env.c  error.c  exception.c  feature.c  heap-gen.c  heap-sc.c  heap.c  io.c  libelk.c  list.c  load-dl.c  load-ld.c  load-rld.c  load-shl.c  load.c  loadlib.c  main.c  malloc.c  math.c  onfork.c  prim.c  print.c  proc.c  promise.c  read.c  (+18 more)
(+81 files in other folders)
