NULL = 

EXTRA_DIST = $(DATA)

examplesdir = $(datadir)/doc/@PACKAGE@/examples

c__dir = $(examplesdir)/c++
c___DATA = \
	c++/class.cpp \
	c++/constructor.cpp \
	$(NULL)

regexpdir = $(examplesdir)/regexp
regexp_DATA = \
	regexp/match.scm \
	$(NULL)

schemedir = $(examplesdir)/scheme
scheme_DATA = \
	scheme/ramanujan.scm \
	scheme/hanoi.scm \
	scheme/fib.scm \
	scheme/co.scm \
	scheme/meissel.scm \
	scheme/perm.scm \
	scheme/prim.scm \
	scheme/Y.scm \
	scheme/kons.scm \
	scheme/mondo.scm \
	scheme/billiard.scm \
	scheme/cell.scm \
	scheme/work.scm \
	scheme/rungekutta.scm \
	scheme/flame.scm \
	scheme/dynamic.scm \
	scheme/cc.scm \
	scheme/cps.scm \
	scheme/acker.scm \
	scheme/fix.scm \
	scheme/compile.scm \
	scheme/sqrt.scm \
	scheme/unify.scm \
	$(NULL)

unixdir = $(examplesdir)/unix
unix_DATA = \
	unix/pipsiz.scm \
	unix/ls.scm \
	unix/timeout.scm \
	unix/calc.scm \
	unix/lock.scm \
	unix/copy.scm \
	$(NULL)

xawdir = $(examplesdir)/xaw
xaw_DATA = \
	xaw/clickcount.scm \
	xaw/tree.scm \
	xaw/dialog.scm \
	xaw/grip.scm \
	xaw/popup.scm \
	xaw/pulldown.scm \
	xaw/scrollbox.scm \
	xaw/accel.scm \
	xaw/list.scm \
	xaw/viewport.scm \
	xaw/panner.scm \
	xaw/scrollbar.scm \
	xaw/stripchart.scm \
	xaw/text.scm \
	xaw/paned.scm \
	xaw/porthole.scm \
	$(NULL)

xlibdir = $(examplesdir)/xlib
xlib_DATA = \
	xlib/wm-delete.scm \
	xlib/map-all.scm \
	xlib/useful.scm \
	xlib/poly.scm \
	xlib/hello.scm \
	xlib/properties.scm \
	xlib/track.scm \
	xlib/lines.scm \
	xlib/picture.scm \
	$(NULL)

xmdir = $(examplesdir)/xm
xm_DATA = \
	xm/scroll-bar.scm \
	xm/radio.scm \
	xm/message-dialog.scm \
	xm/drawing-area.scm \
	xm/radio-stuff.scm \
	xm/popup-menu.scm \
	xm/pulldown-menu.scm \
	xm/main-window.scm \
	xm/menu-stuff.scm \
	xm/vcr.scm \
	xm/option-menu.scm \
	xm/list.scm \
	xm/selection-box.scm \
	$(NULL)

