NULL = 

EXTRA_DIST = $(SCM_FILES) slib.scm.in

pkgdata_DATA = $(SCM_FILES) slib.scm

SCM_FILES = \
	apropos.scm \
	bitstring.scm \
	cscheme.scm \
	debug.scm \
	describe.scm \
	gdbmtest.scm \
	initscheme.scm \
	motif.scm \
	oops.scm \
	parse.scm \
	pp.scm \
	qsort.scm \
	record.scm \
	recordutil.scm \
	regexp.scm \
	safe-env.scm \
	setf.scm \
	struct.scm \
	toplevel.scm \
	trace.scm \
	unix.scm \
	xlib.scm \
	xaw.scm \
	xwidgets.scm \
	$(NULL)

